#2815 Tidy up and refactor for increased clarity